@@ -20,3 +20,4 @@ Current:
 	- bumped the minor version number of .wxmx: overstrike text is
 	  a new feature and therefore a file containing it cannot be read by
 	  old wxMaxima versions.
+	- An autosave functionality
